<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/spacing_middle"
        android:paddingLeft="@dimen/spacing_medium"
        android:paddingRight="@dimen/spacing_medium"
        android:paddingTop="@dimen/spacing_middle">

        <View
            android:layout_width="@dimen/spacing_large"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/term_of_services"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                 />


        </LinearLayout>

        <ImageButton
            android:id="@+id/bt_close"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@color/grey_60"
            app:srcCompat="@drawable/ic_close" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_40" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_mlarge">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingExtra="2dp"
                android:text="@string/terms_condition_text"
             />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_40" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/spacing_middle"
        android:paddingLeft="@dimen/spacing_mlarge"
        android:paddingRight="@dimen/spacing_mlarge"
        android:paddingTop="@dimen/spacing_middle">

        <Button
            android:id="@+id/bt_accept"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_primary"
            android:text="@string/accept"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@android:color/white"
             />

        <View
            android:layout_width="@dimen/spacing_large"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/bt_decline"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_rect_teal_outline"
            android:text="@string/decline"
            android:textStyle="bold"
            android:textAllCaps="false"
             />

    </LinearLayout>
</LinearLayout>