<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Filter &amp; Search"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/close_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="end"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/spacing_mlarge"
        android:paddingLeft="@dimen/spacing_mlarge"
        android:paddingRight="@dimen/spacing_mlarge"
        android:paddingTop="@dimen/spacing_middle"
        >


        <EditText
            android:id="@+id/search_et"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/edit_text_round_bg"
            android:hint="Title"
            android:minHeight="@dimen/spacing_xlarge"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="Type"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/movie_bt"
                android:layout_width="90dp"
                android:layout_height="34dp"
                android:background="@drawable/btn_rounded_grey_outline"
                android:text="@string/movie"
                android:textAllCaps="false"
                android:textColor="@color/grey_40"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/tv_series_bt"
                android:layout_width="100dp"
                android:layout_height="34dp"
                android:background="@drawable/btn_rounded_grey_outline"
                android:text="@string/tv_series"
                android:textAllCaps="false"
                android:textColor="@color/grey_40"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/live_tv_bt"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:background="@drawable/btn_rounded_grey_outline"
                android:text="@string/live_tv"
                android:textColor="@color/grey_40"
                android:textAllCaps="false" />


        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="Year Range"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:orientation="vertical">


            <com.jem.rubberpicker.RubberRangePicker
                android:id="@+id/rangeSeekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:defaultThumbRadius="10dp"
                app:minValue="1900"
                app:maxValue="2020"
                app:elasticBehavior="linear"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                app:highlightTrackColor="@color/colorPrimary"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/min_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1900"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/max_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2020"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:background="@drawable/border_back_primary_color"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/search_bt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/search"
                android:background="@android:color/transparent"
                />

            <!--<LinearLayout
                android:id="@+id/lyt_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:visibility="gone">

                <com.oxoo.spagreen.widget.ViewLoadingDotsFade
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary" />

            </LinearLayout>-->

        </LinearLayout>


    </LinearLayout>

</LinearLayout>